Use only one webhook per channel for mirroring (#67)
* Use only one webhook per channel for mirroring

* Remove code related to reactions

* Bump JDA version, use only one webhook per channel, add [TA] prefix for Teaching Assistant and fix lowercase usernames

* Variable name refactor

* Bump to Java21

* Bump to Java21

* Add comment to build.gradle

* Bump gradle version

* Add thread support for one-webhook mode

---------

Co-authored-by: hokkaydo <“hokkaydo@users.noreply.github.com”>